# helix

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REQUIREMENTS.md  pyproject.toml
.claude/: settings.local.json
helix/: agents.py  cli.py  config.py  context.py  loop.py  models.py  runs.py  selection.py  setup.py  setup_ui.py  success.py
templates/blank/: config.yaml  evaluate.sh  goal.md  helix.toml  master_agent.md  researcher_agent.md  tree_search.md
tests/: test_agents.py  test_cli.py  test_config.py  test_context.py  test_loop.py  test_models.py  test_runs.py  test_selection.py  test_setup.py  test_success.py
